--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "scripts": {
+    "start":"node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
