--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "description": "",
   "scripts": {
-    "start":"node server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
@@ -19,8 +19,10 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
+    "morgan": "^1.10.0",
     "socket.io": "^4.6.1"
   }
 }
